--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,14 @@ dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-thymeleaf:4.0.0")
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator
 	implementation("org.springframework.boot:spring-boot-starter-actuator:4.0.0")
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-flyway
+	implementation("org.springframework.boot:spring-boot-starter-flyway:4.0.0")
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
+	implementation("org.springframework.boot:spring-boot-starter-data-jpa:4.0.0")
+	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
+	implementation("mysql:mysql-connector-java:8.0.33")
+	// https://mvnrepository.com/artifact/org.flywaydb/flyway-core
+	implementation("org.flywaydb:flyway-core:11.19.0")
 }
 
 tasks.named('test') {
