--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=rcrsms
 server.port = 8080
+
+spring.datasource.username=root
+spring.datasource.password=Highearning123$$$
+spring.datasource.url=jdbc:mysql://localhost:412/project5_rcrsms
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migrations
