--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,23 @@ dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-thymeleaf:4.0.0")
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator
 	implementation("org.springframework.boot:spring-boot-starter-actuator:4.0.0")
+
+
+	//  Spring Data JPA (REQUIRED for your Entity and Repository)
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' 
+    //  Validation (REQUIRED for @NotNull)
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    //  Spring Security (For authentication/authorization)
+    implementation 'org.springframework.boot:spring-boot-starter-security' 
+    
+    //  Database Driver
+    runtimeOnly 'mysql:mysql-connector-java'
+    implementation 'org.flywaydb:flyway-core'
+    // --- Testing Dependencies ---
+	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
 }
 
 tasks.named('test') {
