--- a/build.gradle
+++ b/build.gradle
@@ -20,20 +20,20 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
+	implementation("org.springframework.boot:spring-boot-starter-data-jpa:4.0.0")
+	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
+	implementation("mysql:mysql-connector-java:8.0.33")
+	// https://mvnrepository.com/artifact/org.flywaydb/flyway-mysql
+	implementation("org.flywaydb:flyway-mysql:11.19.1")
+	// https://mvnrepository.com/artifact/org.flywaydb/flyway-core
+	implementation("org.flywaydb:flyway-core:11.19.1")
 	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf
 	implementation("org.springframework.boot:spring-boot-starter-thymeleaf:4.0.0")
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator
 	implementation("org.springframework.boot:spring-boot-starter-actuator:4.0.0")
-	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-flyway
-	implementation("org.springframework.boot:spring-boot-starter-flyway:4.0.0")
-	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
-	implementation("org.springframework.boot:spring-boot-starter-data-jpa:4.0.0")
-	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
-	implementation("mysql:mysql-connector-java:8.0.33")
-	// https://mvnrepository.com/artifact/org.flywaydb/flyway-core
-	implementation("org.flywaydb:flyway-core:11.19.0")
 }
 
 tasks.named('test') {
