fix entity conflicts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.flyway.enabled=true
 spring.flyway.url=jdbc:mysql://localhost:412/project5_rcrsms
-spring.flyway.username=root
+spring.flyway.user=root
 spring.flyway.password=Highearning123$$$
 spring.flyway.locations=classpath:db/migrations
