--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=rcrsms
 server.port = 8080
 
-spring.datasource.username=root
-spring.datasource.password=Highearning123$$$
-spring.datasource.url=jdbc:mysql://localhost:412/project5_rcrsms
+spring.datasource.username=rcrsms_mates
+spring.datasource.password=rcrsms@123
+spring.datasource.url=jdbc:mysql://root:yvUXwcNZhyKahihoWZBdzcIBKelSnrkR@yamanote.proxy.rlwy.net:44290/project5_rcrsms
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.flyway.enabled=true
-spring.flyway.url=jdbc:mysql://localhost:412/project5_rcrsms
-spring.flyway.user=root
-spring.flyway.password=Highearning123$$$
+spring.flyway.url=jdbc:mysql://root:yvUXwcNZhyKahihoWZBdzcIBKelSnrkR@yamanote.proxy.rlwy.net:44290/project5_rcrsms
+spring.flyway.user=rcrsms_mates
+spring.flyway.password=rcrsms@123
 spring.flyway.locations=classpath:db/migrations
