--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,29 @@
 spring.application.name=rcrsms
 server.port = 8080
 
-spring.datasource.username=rcrsms_mates
-spring.datasource.password=rcrsms@123
-spring.datasource.url=jdbc:mysql://root:yvUXwcNZhyKahihoWZBdzcIBKelSnrkR@yamanote.proxy.rlwy.net:44290/project5_rcrsms
+# --- TEAM CLOUD DATABASE (Commented out for local development) ---
+# spring.datasource.url=jdbc:mysql://root:yvUXwcNZhyKahihoWZBdzcIBKelSnrkR@yamanote.proxy.rlwy.net:44290/project5_rcrsms
+# spring.datasource.username=rcrsms_mates
+# spring.datasource.password=rcrsms@123
+# spring.flyway.url=jdbc:mysql://root:yvUXwcNZhyKahihoWZBdzcIBKelSnrkR@yamanote.proxy.rlwy.net:44290/project5_rcrsms
+# spring.flyway.user=rcrsms_mates
+# spring.flyway.password=rcrsms@123
+
+# --- YOUR LOCAL DATABASE CONFIGURATION ---
+# 1. Point to localhost (standard port 3306)
+spring.datasource.url=jdbc:mysql://localhost:3306/project5_rcrsms?allowPublicKeyRetrieval=true&useSSL=false
+spring.flyway.url=jdbc:mysql://localhost:3306/project5_rcrsms?allowPublicKeyRetrieval=true&useSSL=false
+# 2. Use your local MySQL credentials
+# (Default for XAMPP/local installs is often 'root' with no password or an empty string)
+spring.datasource.username=root
+spring.datasource.password=Lechat1038!
+spring.flyway.user=root
+spring.flyway.password=Lechat1038!
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# 3. Flyway Configuration (Uses the same local datasource)
 spring.flyway.enabled=true
-spring.flyway.url=jdbc:mysql://root:yvUXwcNZhyKahihoWZBdzcIBKelSnrkR@yamanote.proxy.rlwy.net:44290/project5_rcrsms
-spring.flyway.user=rcrsms_mates
-spring.flyway.password=rcrsms@123
 spring.flyway.locations=classpath:db/migrations
+# This forces the database to match your Java Entities
+spring.jpa.hibernate.ddl-auto=update
