--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migrations
 # This forces the database to match your Java Entities
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
