--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,22 @@
 spring.application.name=rcrsms
-server.port = 8080
+server.port=8080
 
-# --- TEAM CLOUD DATABASE (Commented out for local development) ---
-spring.datasource.url=jdbc:mysql://root:yvUXwcNZhyKahihoWZBdzcIBKelSnrkR@yamanote.proxy.rlwy.net:44290/project5_rcrsms
-spring.datasource.username=rcrsms_mates
-spring.datasource.password=rcrsms@123
-spring.flyway.url=jdbc:mysql://root:yvUXwcNZhyKahihoWZBdzcIBKelSnrkR@yamanote.proxy.rlwy.net:44290/project5_rcrsms
-spring.flyway.user=rcrsms_mates
-spring.flyway.password=rcrsms@123
+# --- TEAM CLOUD DATABASE (Railway.app) ---
+# 1. The URL should ONLY contain the address and database name
+spring.datasource.url=jdbc:mysql://yamanote.proxy.rlwy.net:44290/project5_rcrsms
 
+# 2. Put the credentials here (I used the 'root' ones from your URL as they are likely the correct admin ones)
+spring.datasource.username=root
+spring.datasource.password=yvUXwcNZhyKahihoWZBdzcIBKelSnrkR
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# 3. Flyway Configuration (Uses the same local datasource)
+# --- FLYWAY CONFIGURATION ---
 spring.flyway.enabled=true
+spring.flyway.url=${spring.datasource.url}
+spring.flyway.user=${spring.datasource.username}
+spring.flyway.password=${spring.datasource.password}
 spring.flyway.locations=classpath:db/migrations
-# This forces the database to match your Java Entities
+
+# This prevents Hibernate from messing up your Flyway schema
 spring.jpa.hibernate.ddl-auto=none
