--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 spring.application.name=rcrsms
 server.port=8080
 
-# --- TEAM CLOUD DATABASE (Railway.app) ---
-# 1. The URL should ONLY contain the address and database name
-spring.datasource.url=jdbc:mysql://yamanote.proxy.rlwy.net:44290/project5_rcrsms
+spring.datasource.url=jdbc:mysql://localhost/project5_rcrsms
 
-# 2. Put the credentials here (I used the 'root' ones from your URL as they are likely the correct admin ones)
-spring.datasource.username=rcrsms_mates
-spring.datasource.password=rcrsms@123
+spring.datasource.username=root
+spring.datasource.password=12345
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
@@ -18,5 +15,4 @@ spring.flyway.user=${spring.datasource.username}
 spring.flyway.password=${spring.datasource.password}
 spring.flyway.locations=classpath:db/migrations
 
-# This prevents Hibernate from messing up your Flyway schema
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=validate
